# purkka

./: .travis.yml  Cargo.toml  README.md
src/: main.rs  parser.rs  parsetree.rs  stddef.h  tokenizer.rs  tokentype.rs
src/cformat/: Cargo.toml
src/cformat/src/: lib.rs
src/core/: Cargo.toml  test.h  test.h.gch
src/core/src/: core.rs  lib.rs  main.rs  parser.rs  parsetree.rs  token.rs  tokenizer.rs  tokentype.rs
src/core/tests/: c_integration.rs  integration.rs  parse_and_convert.rs  runner.rs
src/core/tests/testcases/: a.prk  blocks.c  blocks.prk  expressions.c  expressions.prk  floats.c  floats.prk  funs.c  funs.prk  infer.c  infer.prk  lambda.c  lambda.prk  macro.c  macro.prk  main.c  main.prk  omp.c  omp.prk  op.c  op.prk  struct.c  struct.prk  use.prk  vec.prk
src/core/tests/testcases/dependencies/: dep.h  dep.prk  macro.h
src/cparser/: Cargo.toml
src/cparser/src/: grammar.rs  lib.rs  parser.rs
src/cparser/tests/: cparser_compiles.rs
src/ctoken/: Cargo.toml
src/ctoken/src/: token.rs
src/debug/: Cargo.toml
src/debug/src/: debug.rs  lib.rs
src/fragment/: Cargo.toml
src/fragment/src/: fragment.rs  lib.rs  traits.rs
src/fragment/tests/: fragments.rs
src/kieli/: Cargo.toml
src/kieli/src/: main.rs
src/kieliconverter/: Cargo.toml
src/kieliconverter/src/: lib.rs
src/kieliparser/: Cargo.toml
src/kieliparser/src/: lib.rs  parser.rs  token.rs  tokenizer.rs
src/kieliparser/tests/: cparser_compiles.rs
src/kieliparser_procmacros/: Cargo.toml
src/kieliparser_procmacros/src/: lib.rs
src/lalr/: Cargo.toml
src/lalr/benches/: smoke.rs
src/lalr/src/: ast_output.rs  generator.rs  lib.rs  types.rs
src/lalr/tests/: empty.rs  lalr.rs  only_enums.rs  priority.rs  smoke.rs  special.rs
src/lalr_runtime/: Cargo.toml
src/lalr_runtime/src/: lib.rs
src/main/: Cargo.toml
src/parser/: Cargo.toml
src/parser/src/: lib.rs  parser.rs
src/preprocessor/: Cargo.toml  cmd
src/preprocessor/benches/: preprocessor.rs
src/preprocessor/src/: calculator.rs  lib.rs  macrotoken.rs  token.rs  tokenizer.rs  tokentype.rs
src/preprocessor/tests/: compat.rs  cond_macros.rs  fn_macros.rs  macros.rs  paste_macros.rs  tokens.rs  weird_macros.rs
src/preprocessor/tests/common/: mod.rs
src/purkka/: Cargo.toml
src/purkka/src/: core.rs  main.rs
src/purkka/tests/: c_integration.rs  parse_and_convert.rs  runner.rs
src/purkka/tests/testcases/: a.c  a.prk  cast.c  cast.prk  decls.c  decls.prk  expressions.c  expressions.prk  floats.prk  funs.c  funs.prk  infer.c  infer.prk  lambda.c  macro.c  macro.prk  main.prk  omp.c  omp.prk  op.c  strings.c  strings.prk  struct.c  struct.prk  use.c  use.prk  vec.c  vec.prk
src/purkka/tests/testcases/dependencies/: macro.h  vec.h
src/purkkaconverter/: Cargo.toml
src/purkkaconverter/src/: array.rs  const_eval.rs  declarations.rs  imports.rs  inference.rs  lambda.rs  lib.rs  operator.rs  private_to_static.rs  traits.rs  typedef.rs
src/purkkaparser/: Cargo.toml
src/purkkaparser/src/: builtins.rs  lib.rs  parser.rs  token.rs  tokenizer.rs  visitor.rs
src/purkkaparser/tests/: cparser_compiles.rs  parser_tests.rs
src/purkkaparser_procmacros/: Cargo.toml
src/purkkasyntax/: Cargo.toml
src/purkkasyntax/src/: lib.rs  visitor.rs
src/purkkasyntax_procmacros/: Cargo.toml
src/purkkasyntax_procmacros/src/: lib.rs
src/purkkatoken/: Cargo.toml
src/purkkatoken/src/: token.rs  tokenizer.rs
src/purkkatypes/: Cargo.toml
src/purkkatypes/src/: lib.rs
src/resolve/: Cargo.toml
src/resolve/src/: lib.rs
src/shared/: Cargo.toml
src/shared/src/: fragment.rs  intern.rs  lib.rs  traits.rs  utils.rs
src/shared/tests/: fragments.rs
