[workspace]
members = [
    "src/cformat",
    "src/core",
    "src/cparser",
    "src/ctoken",
    "src/fragment",
    "src/lalr",
    "src/parser",
    "src/preprocessor",
    "src/purkka",
    "src/purkkaconverter",
    "src/purkkaparser",
    "src/purkkasyntax_procmacros",
    "src/purkkasyntax",
    "src/purkkatoken",
    "src/resolve",
    "src/shared"
]
