[workspace]
members = [
    "src/cformat",
    "src/cparser",
    "src/ctoken",
    "src/fragment",
    "src/lalr",
    "src/preprocessor",
    "src/purkka",
    "src/purkkaconverter",
    "src/purkkaparser",
    "src/purkkasyntax_procmacros",
    "src/purkkasyntax",
    "src/purkkatoken",
    "src/resolve",
    "src/shared"
]

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
debug = true
