[package]
name = "core"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
cparser = { path="../cparser" }
ctoken = { path="../ctoken" }
parser = { path="../parser" }
preprocessor = { path="../preprocessor" }
debug = { path="../debug" }
clap = "2.32.0"
