[package]
name = "core"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
cformat = { path="../cformat" }
cparser = { path="../cparser" }
ctoken = { path="../ctoken" }
parser = { path="../parser" }
purkkaparser = { path="../purkkaparser" }
purkkaconverter = { path="../purkkaconverter" }
preprocessor = { path="../preprocessor" }
debug = { path="../debug" }
clap = "2.32.0"
