[package]
name = "core"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
cformat = { path="../cformat" }
cparser = { path="../cparser" }
ctoken = { path="../ctoken" }
parser = { path="../parser" }
purkkaparser = { path="../purkkaparser" }
purkkaconverter = { path="../purkkaconverter" }
preprocessor = { path="../preprocessor" }
resolve = { path="../resolve" }
debug = { path="../debug" }
clap = "2.32.0"
tool = "0.2.1"
