[package]
name = "cparser"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
ctoken = { path="../ctoken" }
debug = { path="../debug" }
fragment = { path="../fragment" }
lalr = { path="../lalr" }
shared = { path="../shared" }
preprocessor = { path="../preprocessor" }
purkkasyntax = { path="../purkkasyntax" }
