[package]
name = "preprocessor"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
ctoken = { path="../ctoken" }
debug = { path="../debug" }
fragment = { path="../fragment" }
resolve = { path="../resolve" }
shared = { path="../shared" }
regex = "1.1.0"
uuid = { version = "0.7", features = ["v4"] }
