[package]
name = "purkkaconverter"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
cparser = { path="../cparser" }
ctoken = { path="../ctoken" }
purkkaparser = { path="../purkkaparser" }
purkkasyntax = { path="../purkkasyntax" }
purkkatoken = { path="../purkkatoken" }
resolve = { path="../resolve" }
shared = { path="../shared" }
