[package]
name = "purkkaparser"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
fragment = { path="../fragment" }
lalr = { path="../lalr" }
purkkaparser_procmacros = { path="../purkkaparser_procmacros" }
purkkatypes = { path="../purkkatypes" }
shared = { path="../shared" }
