[package]
name = "purkkaparser"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

[dependencies]
fragment = { path="../fragment" }
lalr = { path="../lalr" }
purkkasyntax = { path="../purkkasyntax" }
purkkatoken = { path="../purkkatoken" }
shared = { path="../shared" }
regex = "1.1.6"

[dev-dependencies]
purkkaconverter = { path="../purkkaconverter" }
